# code_agent

./: .env.example  .gitignore  Dockerfile  GITHUB_OAUTH_SETUP.md  README.md  README_CN.md  USAGE_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_github_connection.py  test_github_mock.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  exceptions.py  main.py
app/api/: __init__.py  code_routes.py  github_routes.py  llm_routes.py  pr_routes.py  settings_routes.py  task_routes.py
app/core/: __init__.py  config.py  database.py  logging.py  middleware.py  redis.py  security.py  validation.py
app/models/: __init__.py  code_analysis.py  pull_request.py  repository.py  settings.py  task.py  user.py
app/services/: __init__.py  code_analysis_service.py  github_service.py  llm_service.py  pr_service.py  settings_service.py
app/utils/: __init__.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Sidebar.tsx  UsageGuide.tsx
frontend/src/pages/: Develop.tsx  GitHubCallback.tsx  Home.tsx  Settings.tsx
frontend/src/services/: api.ts  settingsService.ts
frontend/src/styles/: App.css  index.css
scripts/: init_db.sql  migrate.sh
tests/: test_code_analysis.py
